--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       font-family: Arial, sans-serif;
     }
     .hero {
-      background: url('file-NCyEWtPw7SzwZSaqrNJgzU') no-repeat center center/cover;
+      background: url('images/background.jpg') no-repeat center center/cover;
       height: 100vh;
       display: flex;
       flex-direction: column;
