--- a/index.html
+++ b/index.html
@@ -1,72 +1,105 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Keval's Photography</title>
+  <title>Keval Photography</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
-    body, html {
+    * {
       margin: 0;
       padding: 0;
-      height: 100%;
-      font-family: Arial, sans-serif;
+      box-sizing: border-box;
     }
+
+    body, html {
+      font-family: 'Open Sans', sans-serif;
+      height: 100%;
+    }
+
+    html {
+      scroll-behavior: smooth;
+    }
+
     .hero {
+      position: relative;
       background: url('images/2.jpg') no-repeat center center/cover;
       height: 100vh;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       color: white;
-      text-shadow: 2px 2px 4px #000;
     }
+
+    .hero::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+    }
+
+    .hero-content h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 3.5rem;
+      margin-bottom: 20px;
+    }
+
+    .btn {
+      background-color: #fff;
+      color: #000;
+      padding: 12px 25px;
+      font-weight: bold;
+      border-radius: 5px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background-color: #ccc;
+    }
+
     nav {
       position: absolute;
       top: 20px;
-      left: 0;
-      right: 0;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
+      right: 20px;
+      z-index: 3;
     }
+
     nav a {
+      margin-left: 15px;
       color: white;
       text-decoration: none;
       font-weight: bold;
-      padding: 8px 16px;
-      border-radius: 5px;
-      transition: background 0.3s;
     }
+
     nav a:hover {
-      background: rgba(255, 255, 255, 0.2);
-    }
-    .hero h1 {
-      font-size: 3em;
-      margin: 0;
-    }
-    .hero p {
-      font-size: 1.5em;
-      margin-top: 10px;
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
+
+  <nav>
+    <a href="gallery.html">Gallery</a>
+    <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Instagram</a>
+  </nav>
+
   <div class="hero">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Instagram</a>
-    </nav>
-    <h1>Keval's Photography</h1>
-    <p>Nature through my lens</p>
-  </div>  <!-- Contact Section -->  <section id="contact" style="padding: 60px 20px; background: #111; color: white; text-align: center;">
-    <h2>Contact Me</h2>
-    <p>Follow me on Instagram for more photography updates!</p>
-    <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" 
-       target="_blank" 
-       style="display: inline-block; margin-top: 15px; padding: 12px 24px; background: #e1306c; color: white; border-radius: 8px; text-decoration: none; font-weight: bold;">
-      @keval.kotadia
-    </a>
-  </section>
+    <div class="hero-content">
+      <h1>Keval's Photography</h1>
+      <a href="gallery.html" class="btn">View My Work</a>
+    </div>
+  </div>
+
 </body>
 </html>
