--- a/index.html
+++ b/index.html
@@ -4,111 +4,121 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Keval Photography</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/favicon.png" type="image/png">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <style>
-    * {
+    body {
       margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body, html {
       font-family: 'Open Sans', sans-serif;
-      height: 100%;
-    }
-    html {
+      background: url('images/2.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
       scroll-behavior: smooth;
     }
 
-    .hero {
-      position: relative;
-      background: url('images/2.jpg') no-repeat center center/cover;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-    }
-
-    .hero::after {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      height: 100%;
-      width: 100%;
-      background-color: rgba(0,0,0,0.6);
-      z-index: 1;
-    }
-
-    .hero-content {
-      position: relative;
-      z-index: 2;
+    header {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 1.5rem;
       text-align: center;
     }
 
-    .hero-content h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 3.5rem;
-      margin-bottom: 20px;
-    }
-
-    .btn {
-      background-color: #ffffff;
-      color: #000;
-      padding: 12px 25px;
-      font-weight: bold;
-      border-radius: 5px;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-
-    .btn:hover {
-      background-color: #ddd;
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
     }
 
     nav {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      z-index: 3;
+      text-align: center;
+      margin: 20px 0;
     }
 
     nav a {
-      margin-left: 15px;
-      color: white;
+      margin: 0 15px;
+      color: #fff;
       text-decoration: none;
-      font-weight: bold;
+      font-size: 1.1rem;
+      padding: 8px 12px;
+      border: 2px solid #fff;
+      border-radius: 5px;
+      transition: background 0.3s ease, color 0.3s ease;
     }
 
     nav a:hover {
-      text-decoration: underline;
+      background: #fff;
+      color: #000;
     }
 
-    @media (max-width: 768px) {
-      .hero-content h1 {
+    .content {
+      text-align: center;
+      padding: 60px 20px;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    .content h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    .instagram-btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 24px;
+      background-color: #E1306C;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+
+    .instagram-btn:hover {
+      background-color: #c72c61;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      font-size: 14px;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
         font-size: 2rem;
       }
-      nav {
-        right: 10px;
-      }
+
       nav a {
-        font-size: 14px;
+        display: block;
+        margin: 10px auto;
+      }
+
+      .content h2 {
+        font-size: 1.5rem;
       }
     }
   </style>
 </head>
 <body>
 
+  <header>
+    <h1>Keval Photography</h1>
+  </header>
+
   <nav>
+    <a href="index.html">Home</a>
     <a href="gallery.html">Gallery</a>
     <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Instagram</a>
   </nav>
 
-  <div class="hero">
-    <div class="hero-content">
-      <h1>Keval's Photography</h1>
-      <a href="gallery.html" class="btn">View My Work</a>
-    </div>
+  <div class="content">
+    <h2>Welcome to My Photography World</h2>
+    <p>Explore the beauty of nature through my lens. Dive into the gallery to see more.</p>
+    <a class="instagram-btn" href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Follow on Instagram</a>
   </div>
+
+  <footer>
+    &copy; 2025 Keval Photography. All rights reserved.
+  </footer>
 
 </body>
 </html>
