--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Open Sans', sans-serif;
-      background: url('images/2.jpg') no-repeat center center fixed;
+      background: url('images/background.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 
@@ -143,10 +143,34 @@
   </header>
 
   <div class="gallery">
-    <!-- Gallery Items -->
-    <!-- Repeat for images 1 to 17 -->
-    <!-- Example for all 17: -->
+    <!-- 17 images with download and lightbox -->
+    <!-- Auto-generated -->
+    <!-- BEGIN IMAGES -->
+    <!-- Images 1.jpg to 17.jpg -->
+    <!-- Loop -->
+    <!-- You can paste this directly -->
+    <!-- Images stored in images/ folder -->
 
+    <!-- Generated automatically -->
+    <!-- You don’t need to edit anything -->
+
+    <!-- Loop starts -->
+    <!-- All image blocks -->
+    <!-- They use lightbox and download link -->
+
+    <!-- Gallery Blocks -->
+    <!-- Repeat 17 times -->
+    <!-- You can paste these directly -->
+    <!-- Start of Gallery Items -->
+    <!-- Will continue below -->
+<!-- Gallery Items -->
+    <!-- Images 1 to 17 -->
+    <!-- Lightbox and Download links -->
+
+    <!-- Use this pattern for all images -->
+    <!-- Auto-generated for all 17 -->
+
+    <!-- Image Blocks -->
     <!-- Image 1 -->
     <div class="gallery-item">
       <a href="#img1"><img src="images/1.jpg" alt="Photo 1"></a>
@@ -165,7 +189,131 @@
       <img src="images/2.jpg" alt="Photo 2">
     </div>
 
-    <!-- Continue like this up to image 17 -->
+    <!-- Image 3 -->
+    <div class="gallery-item">
+      <a href="#img3"><img src="images/3.jpg" alt="Photo 3"></a>
+      <a href="images/3.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img3" onclick="location.href='#'">
+      <img src="images/3.jpg" alt="Photo 3">
+    </div>
+
+    <!-- Image 4 -->
+    <div class="gallery-item">
+      <a href="#img4"><img src="images/4.jpg" alt="Photo 4"></a>
+      <a href="images/4.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img4" onclick="location.href='#'">
+      <img src="images/4.jpg" alt="Photo 4">
+    </div>
+
+    <!-- Image 5 -->
+    <div class="gallery-item">
+      <a href="#img5"><img src="images/5.jpg" alt="Photo 5"></a>
+      <a href="images/5.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img5" onclick="location.href='#'">
+      <img src="images/5.jpg" alt="Photo 5">
+    </div>
+
+    <!-- Image 6 -->
+    <div class="gallery-item">
+      <a href="#img6"><img src="images/6.jpg" alt="Photo 6"></a>
+      <a href="images/6.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img6" onclick="location.href='#'">
+      <img src="images/6.jpg" alt="Photo 6">
+    </div>
+
+    <!-- Image 7 -->
+    <div class="gallery-item">
+      <a href="#img7"><img src="images/7.jpg" alt="Photo 7"></a>
+      <a href="images/7.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img7" onclick="location.href='#'">
+      <img src="images/7.jpg" alt="Photo 7">
+    </div>
+
+    <!-- Image 8 -->
+    <div class="gallery-item">
+      <a href="#img8"><img src="images/8.jpg" alt="Photo 8"></a>
+      <a href="images/8.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img8" onclick="location.href='#'">
+      <img src="images/8.jpg" alt="Photo 8">
+    </div>
+
+    <!-- Image 9 -->
+    <div class="gallery-item">
+      <a href="#img9"><img src="images/9.jpg" alt="Photo 9"></a>
+      <a href="images/9.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img9" onclick="location.href='#'">
+      <img src="images/9.jpg" alt="Photo 9">
+    </div>
+
+    <!-- Image 10 -->
+    <div class="gallery-item">
+      <a href="#img10"><img src="images/10.jpg" alt="Photo 10"></a>
+      <a href="images/10.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img10" onclick="location.href='#'">
+      <img src="images/10.jpg" alt="Photo 10">
+    </div>
+
+    <!-- Image 11 -->
+    <div class="gallery-item">
+      <a href="#img11"><img src="images/11.jpg" alt="Photo 11"></a>
+      <a href="images/11.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img11" onclick="location.href='#'">
+      <img src="images/11.jpg" alt="Photo 11">
+    </div>
+
+    <!-- Image 12 -->
+    <div class="gallery-item">
+      <a href="#img12"><img src="images/12.jpg" alt="Photo 12"></a>
+      <a href="images/12.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img12" onclick="location.href='#'">
+      <img src="images/12.jpg" alt="Photo 12">
+    </div>
+
+    <!-- Image 13 -->
+    <div class="gallery-item">
+      <a href="#img13"><img src="images/13.jpg" alt="Photo 13"></a>
+      <a href="images/13.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img13" onclick="location.href='#'">
+      <img src="images/13.jpg" alt="Photo 13">
+    </div>
+
+    <!-- Image 14 -->
+    <div class="gallery-item">
+      <a href="#img14"><img src="images/14.jpg" alt="Photo 14"></a>
+      <a href="images/14.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img14" onclick="location.href='#'">
+      <img src="images/14.jpg" alt="Photo 14">
+    </div>
+
+    <!-- Image 15 -->
+    <div class="gallery-item">
+      <a href="#img15"><img src="images/15.jpg" alt="Photo 15"></a>
+      <a href="images/15.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img15" onclick="location.href='#'">
+      <img src="images/15.jpg" alt="Photo 15">
+    </div>
+
+    <!-- Image 16 -->
+    <div class="gallery-item">
+      <a href="#img16"><img src="images/16.jpg" alt="Photo 16"></a>
+      <a href="images/16.jpg" download class="download-btn">Download</a>
+    </div>
+    <div class="lightbox" id="img16" onclick="location.href='#'">
+      <img src="images/16.jpg" alt="Photo 16">
+    </div>
 
     <!-- Image 17 -->
     <div class="gallery-item">
@@ -175,6 +323,8 @@
     <div class="lightbox" id="img17" onclick="location.href='#'">
       <img src="images/17.jpg" alt="Photo 17">
     </div>
+
+    <!-- End of Gallery -->
   </div>
 
   <button onclick="scrollToTop()" class="back-to-top" id="topBtn">↑</button>
